# Viro

./: Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
assets/examples/: sample.glb
editor/: Cargo.toml
editor/src/: camera.rs  interface.rs  main.rs  observers.rs  picking.rs  transform.rs
editor/src/command/: add.rs  import.rs  mod.rs  scene.rs
editor/src/interface/: components.rs  dock.rs  mod.rs  quick.rs  toolbar.rs
editor/src/interface/dock/: entities.rs  inspector.rs  view.rs
editor/src/transform/: gizmo.rs  input.rs  mod.rs  observers.rs
